Fixed bug #34358 (Fatal error: Cannot re-assign $this)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@197419 c90b9560-bf6c-de11-be94-00142212c4b1